# explainable-crypto-ai

./: .gitignore  Makefile  misc.py  pyproject.toml  requirements.txt  setup.py  tasks.py
aws/: Dockerfile  lambda_function.py
config/: backtest.yaml  data.yaml  predict.yaml  train.yaml
configs/: config.yaml
configs/agents/: full.yaml
configs/features/: default.yaml
configs/labels/: fh_24_cls.yaml
configs/ml/: .patched_train_rf.yaml  predict.yaml  train_rf.yaml
data/registry/: raw_market.parquet
scripts/: backtest_model.py  batch_explain.py  compare_models.py  create_features.py  data_ingest.py  evaluate_logs.py  fill_actuals.py  infer_and_log.py  plot_shap_trends.py  snapshot_ccxt.py  train_model.py  view_logs.py
src/: data_ingest.py  explain.py  infer.py  preprocess.py  train_model.py
src/agents/: sentiment_scout.py
src/eval/: evaluator.py
src/excrypto/: cli.py
src/excrypto/agents/: catalog.py  cli.py  orchestrator.py  runner.py  tools.py
src/excrypto/apps/: dashboard.py
src/excrypto/backtest/: cli.py  engine.py  io.py  metrics.py  writer.py
src/excrypto/baseline/: cli.py  hodl.py  momentum.py  signals.py  writer.py
src/excrypto/baselines/: vt_hodl.py
src/excrypto/compare/: model_comparator.py
src/excrypto/dashboard/: app.py  io_runs.py
src/excrypto/data/: cli.py  panel.py  paths.py  (+3 more)
src/explain/: explainer.py
src/inference/: predictor.py
src/scripts/: run_sentiment.py
src/training/: trainer.py
src/utils/: model_loader.py
tests/: test_backtest_engine.py  test_baselines.py  test_cli_end_to_end.py  test_data_ingest.py  test_features.py  test_features_basic.py  test_infer.py  test_inference.py  test_lambda_container.py  test_model.py  test_model_trainer.py  test_pit.py  test_preprocess.py  test_risk_metrics.py  test_snapshot.py  test_splits.py
(+64 files in other folders)
