[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "explainable-crypto-ai"
version = "0.1.0"                   # or use dynamic = ["version"] with setuptools_scm
description = "Feature-pipeline + LightGBM training/inference for crypto with explainability"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["ml", "timeseries", "crypto", "explainability"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "lightgbm>=4.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "pyyaml>=6.0",
  "typer>=0.12",
  # explainability stack (optional if you use it)
  "shap>=0.44",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML",
  "types-requests",
  # if you want notebooks
  "jupyter",
]

[project.scripts]
excrypto = "excrypto.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

# ---------- Tooling ----------
[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP","B"]
ignore = ["E501"]            # if you prefer not to wrap long lines
fix = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["excrypto"]
branch = true
